@@ -17,8 +17,9 @@ MAKE = make
 GZIP = gzip -S .gz
 
 #### Environment Variable Definitions ####
-OS = macosx
-PREFIX = /Users/klabrie/prgc
+UNAME = `uname -s`
+OS = redhat
+PREFIX = $(HOME)/prgc
 INCLDIR = $(PREFIX)/include
 LIBDIR = $(PREFIX)/lib
 
@@ -39,7 +40,7 @@ BASIC_FILES = Makefile Changes TODO
 DOCS = doc.txt
 TEST_FILES = testfile.dat
 VERSION = 0
-RELEASE = $(VERSION).2.4
+RELEASE = $(VERSION).2.5
 
 #### Object Definitions ####
 BINS = tail2head mergecube
@@ -111,8 +112,7 @@ install-shared :
 	install -d -m 0755 $(LPREFIX)/lib
 	install -m 0755 lib$(PKGNAME).so.$(RELEASE) $(LPREFIX)/lib/
 	/sbin/ldconfig -n $(LPREFIX)/lib/
-	ln -sf $(LPREFIX)/lib/lib$(PKGNAME).so.$(RELEASE) \
-	  $(LPREFIX)/lib/lib$(PKGNAME).so
+	ln -sf lib$(PKGNAME).so.$(VERSION) $(LPREFIX)/lib/lib$(PKGNAME).so
 	install -d -m 0755 $(IPREFIX)/include
 	install -m 0644 $(HEADERS) $(IPREFIX)/include/
 
