@@ -2,3 +2,4 @@
 - wrcube doesn't print to stdout yet.
 - documentation
 - !!!! testcube won't work because the file testcube.dat is nowhere to be found
+- Use UNAME to set OS.
